security: hash de contraseña y verificacion de login

--- a/src/main/resources/static/users.html
+++ b/src/main/resources/static/users.html
@@ -388,7 +388,7 @@
                                     <th>Actions</th>
                                 </tr>
                                 </thead>
-                                <tbody><!--#dataTable tbody busca y encuentra aqui -->
+                                <tbody><!--#dataTable tbody busca y encuentra aqui usuarios van aqui-->
 
                                 </tbody>
                             </table>
