feat: persist JWT token in localStorage

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -80,7 +80,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
-    <script src="js/login.js"></script>//cargamos/importamos la funcion que usara al apretar el boton
+    <script src="js/login.js"></script><!--cargamosimportamos la funcion que usara al apretar el boton-->
 
 
 </body>
